--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -25,8 +25,8 @@ html(lang='en')
   body
 
     header
-      h1.site-title Is It Raining Now?
       .icon-menu.nav-toggle
+      h1.site-title Raining Now?
       nav.main-navigation
         ul
           li
@@ -41,7 +41,7 @@ html(lang='en')
           li
             a(href="#").nav-toggle.city Chicago
           li
-            h2
+            h2.close
               a(href="#").nav-toggle Close
 
     main
