--- a/app/css/3-modules/header.styl
+++ b/app/css/3-modules/header.styl
@@ -1,7 +1,7 @@
 header
   background #333
   color #fff
-  padding 20px
+  padding 20px 10px
   position relative
 
 .site-title
@@ -10,8 +10,6 @@ header
   margin 0
 
 .nav-toggle
-  position absolute
-  top 1px
   cursor pointer
 
 a
@@ -30,17 +28,16 @@ nav li
   height 100%
   text-align: center
   background #222
-  transform translateX(-100%)
+  transform translateZ(0) translateX(-100%)
   transition all 250ms ease-in-out
 
   &.open
-    transform translateX(0)
+    transform translateZ(0) translateX(0)
 
   .nav-toggle
     position relative
 
 .main-navigation ul
-  margin 0 60px
   padding 0
 
   a
@@ -53,10 +50,18 @@ nav li
 
 
   .header
-    margin 50px 20px 10px
     font-size: 2.5em
 
 
 
 .icon-menu
-  font-size: 40px
+  font-size: 30px
+  height 50px
+  width @height
+  line-height @height
+  text-align: center
+  position absolute
+  top 14px
+
+// .close
+//   margin 10px 0
