adding forecast for tomorrow

--- a/app/css/2-basics/general-styles.styl
+++ b/app/css/2-basics/general-styles.styl
@@ -3,3 +3,9 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(white, 0), rgba(white, 0.75), rgba(white, 0));
 }
+
+hr.black {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(black, 0), rgba(black, 0.75), rgba(black, 0));
+}
