--- a/app/css/3-modules/main-content.styl
+++ b/app/css/3-modules/main-content.styl
@@ -6,9 +6,17 @@ main
 h1#temp
   font-size: 6em
   text-align: center
+  margin 25px 0 0
 
 p#summary
-  font-size: 1.5em
+  font-size: 2em
+  margin: 0
 
 p#location
   font-size: 1.2em
+
+h2#tomorrow-temp
+  font-size: 2em
+
+p#rain-chance
+  font-size: 1.5em
