--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -45,11 +45,20 @@ html(lang='en')
               a(href="#").nav-toggle Close
 
     main
-      h1#temp.icon-menu 65°C
+      h1#temp.icon-sun
 
-      p#summary Partly Cloudy
+      p#summary
 
-      p#location.icon-location Kiev
+      p#location.icon-location
+
+      hr.black
+
+      h2 Tomorrow
+
+      h2#tomorrow-temp.icon-sun
+
+      p#rain-chance
+
 
 
     // JS
