--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -12,7 +12,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     link(rel="manifest", href="manifest.json")
-    // meta(name="mobile-web-app-capable", content="yes")
+    meta(name="mobile-web-app-capable", content="yes")
 
     // Font
     link(href='https://fonts.googleapis.com/css?family=Montserrat', rel='stylesheet', type='text/css')
